--- a/src/the-super-tiny-vue.html
+++ b/src/the-super-tiny-vue.html
@@ -35,7 +35,7 @@
             },
             methods: {
                 add: function () {
-                    vm.counter += 1;
+                    this.counter += 1;
                     //vm.isShow = !vm.isShow;
                 }
             },
