--- a/src/the-super-tiny-vue.html
+++ b/src/the-super-tiny-vue.html
@@ -19,14 +19,15 @@
 </head>
 <body>
     <div id="app">
-        <h2 v-text='hello' v-show='isShow'></h2>
+        <h2 v-text='hello' v-hidden='isShow'></h2>
         <input type="text" v-model='counter'>
         <button v-on-click='add' type="button">add</button>
         <p v-text='counter'></p>
+        <h2 v-text='hello' v-show='isShow'></h2>
     </div>
     <script src='./the-super-tiny-vue.js'></script>
     <script>
-        var vm = new TinyVue({
+        new TinyVue({
             el: 'app',
             data: {
                 counter: 1,
@@ -36,7 +37,7 @@
             methods: {
                 add: function () {
                     this.counter += 1;
-                    //vm.isShow = !vm.isShow;
+                    this.isShow = !this.isShow;
                 }
             },
             ready () {
